--- a/kubernetes/core/crossplane-system/crossplane/providers/github.yaml
+++ b/kubernetes/core/crossplane-system/crossplane/providers/github.yaml
@@ -4,4 +4,5 @@ kind: Provider
 metadata:
   name: provider-upjet-github
 spec:
-  package: crossplane-contrib/provider-upjet-github:v0.1.0
+  # renovate: datasource=github-releases depName=crossplane-contrib/provider-upjet-github
+  package: crossplane-contrib/provider-upjet-github:v0.18.5
