--- a/kubernetes/core/crossplane-system/crossplane/ks.yaml
+++ b/kubernetes/core/crossplane-system/crossplane/ks.yaml
@@ -19,6 +19,7 @@ spec:
     name: homelab
     namespace: flux-system
   wait: true
+
 # yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -39,4 +40,6 @@ spec:
     kind: GitRepository
     name: homelab
     namespace: flux-system
-  wait: true
+    wait: true
+    dependsOn:
+      - name: core-crossplane
