--- a/kubernetes/core/security/authelia/app/kustomization.yaml
+++ b/kubernetes/core/security/authelia/app/kustomization.yaml
@@ -6,6 +6,8 @@ resources:
   - ./helmrelease.yaml
   - ./externalsecret.yaml
   - ./config/secrets
+components:
+  - ../../../flux/components/postgres
 configMapGenerator:
   - name: authelia
     files:
