--- a/kubernetes/flux/components/postgres/cluster.yaml
+++ b/kubernetes/flux/components/postgres/cluster.yaml
@@ -56,11 +56,10 @@ spec:
         type: AlphaNumeric
   backups:
     pgbackrest:
-      configuration: #&backupConfig
+      configuration: &backupConfig
         - secret:
             name: "${APP}-crunchy-postgres"
-      global: #&backupFlag
-        # Global
+      global: &backupFlag # Global
         compress-type: "bz2"
         compress-level: "9"
         # Minio
@@ -81,7 +80,7 @@ spec:
           app.kubernetes.io/name: ${APP}-crunchy-postgres-backup
       repos:
         - name: repo1 # hetzner
-          s3: #&hetzner
+          s3: &hetzner
             bucket: "stevewm-mini-cluster-postgres-backup"
             endpoint: "nbg1.your-objectstorage.com"
             region: "eu-central"
@@ -89,14 +88,14 @@ spec:
             full: "0 1 * * 0" # Sunday at 01:00
             differential: "0 1 * * 1-6" # Mon-Sat at 01:00
             incremental: "0 2-23 * * *" # Every hour except 01:00
-  # dataSource:
-  #   pgbackrest:
-  #     stanza: db
-  #     configuration: *backupConfig
-  #     global: *backupFlag
-  #     repo:
-  #       name: repo1
-  #       s3: *hetzner
+  dataSource:
+    pgbackrest:
+      stanza: db
+      configuration: *backupConfig
+      global: *backupFlag
+      repo:
+        name: repo1
+        s3: *hetzner
   proxy:
     pgBouncer:
       port: 5432
