--- a/kubernetes/core/security/authelia/ks.yaml
+++ b/kubernetes/core/security/authelia/ks.yaml
@@ -24,3 +24,6 @@ spec:
     - name: core-secretgenerator
     - name: core-smtp-relay
       namespace: network
+  postBuild:
+    substitute:
+      APP: authelia
