feat: redeploy authelia

--- a/kubernetes/core/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/core/security/authelia/app/externalsecret.yaml
@@ -3,31 +3,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: authelia-db
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: authelia-db
-    template:
-      type: Opaque
-      data:
-        AUTHELIA_STORAGE_POSTGRES_ADDRESS: '{{ index . "host" }}'
-        AUTHELIA_STORAGE_POSTGRES_DATABASE: '{{ index . "dbname" }}'
-        AUTHELIA_STORAGE_POSTGRES_USERNAME: '{{ index . "user" }}'
-        AUTHELIA_STORAGE_POSTGRES_PASSWORD: '{{ index . "password" }}'
-  dataFrom:
-    - extract:
-        key: postgres-pguser-authelia
-
-# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/external-secrets.io/externalsecret_v1.json
----
-apiVersion: external-secrets.io/v1
-kind: ExternalSecret
-metadata:
-  name: authelia-oidc
+  name: authelia
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -55,7 +31,8 @@ spec:
       remoteRef:
         key: GLAUTH_SEARCH_PSW
 
-    # Apps
-    - secretKey: GRAFANA_OAUTH_CLIENT_SECRET_DIGEST
-      remoteRef:
-        key: GRAFANA_OAUTH_CLIENT_SECRET_DIGEST
+  # Apps
+  dataFrom:
+    - find:
+        name:
+          regexp: "_OAUTH_CLIENT_SECRET_DIGEST"
