--- a/kubernetes/core/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/core/security/authelia/app/helmrelease.yaml
@@ -83,10 +83,6 @@ spec:
             envFrom:
               - secretRef:
                   name: *app
-              - secretRef:
-                  name: authelia-db
-              - secretRef:
-                  name: authelia-generated
 
             env:
               AUTHELIA_SERVER_ADDRESS: tcp://0.0.0.0:80
@@ -134,23 +130,13 @@ spec:
         endpoints:
           - port: metrics
 
-    ingress:
+    route:
       app:
-        className: nginx-internal
-        annotations:
-          # external-dns.alpha.kubernetes.io/target: ext.stevewm.dev
-          nginx.ingress.kubernetes.io/configuration-snippet: |
-            add_header Cache-Control "no-store";
-            add_header Pragma "no-cache";
-            add_header X-Frame-Options "SAMEORIGIN";
-            add_header X-XSS-Protection "1; mode=block";
-        hosts:
-          - host: sso.stevewm.dev
-            paths:
-              - path: /
-                service:
-                  identifier: app
-                  port: http
+        hostnames: ["sso.stevewm.dev"]
+        parentRefs:
+          - name: internal
+            namespace: network
+            sectionName: https
 
     persistence:
       config:
