--- a/kubernetes/core/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/core/security/authelia/app/externalsecret.yaml
@@ -15,9 +15,9 @@ spec:
       remoteRef:
         key: AUTHELIA_STORAGE_ENCRYPTION_KEY
 
-    - secretKey: AUTHELIA_IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY
+    - secretKey: AUTHELIA_OIDC_JWKS_KEY
       remoteRef:
-        key: AUTHELIA_OIDC_ISSUER_PRIVATE_KEY
+        key: OIDC_JWKS_KEY
 
     - secretKey: AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET
       remoteRef:
