--- a/kubernetes/core/security/authelia/app/config/config.yaml
+++ b/kubernetes/core/security/authelia/app/config/config.yaml
@@ -1,6 +1,5 @@
 # yaml-language-server: $schema=https://www.authelia.com/schemas/latest/json-schema/configuration.json
 ---
-# Note: Authelia vars should be escaped with $${VAR_NAME} to avoid interpolation by Flux
 authentication_backend:
   ldap:
     address: ldap://glauth.security.svc.cluster.local:389
@@ -37,6 +36,15 @@ session:
     database_index: 2
     host: dragonfly.database.svc.cluster.local
 
+storage:
+  encryption_key:
+    { { secret "/config/secret/AUTHELIA_STORAGE_ENCRYPTION_KEY" } }
+  postgres:
+    address: tcp://authelia-pods.security.svc.cluster.local:5432
+    database: authelia
+    username: { { secret "/config/db/username" } }
+    password: { { secret "/config/db/password" } }
+
 notifier:
   disable_startup_check: true
   smtp:
@@ -70,18 +78,19 @@ access_control:
 
 identity_providers:
   oidc:
+    jwks:
+      - key: |
+          {{ secret "/config/secret/OIDC_JWKS_KEY" | mindent 10 "|" | msquote }}
     cors:
       endpoints: ["authorization", "token", "revocation", "introspection"]
       allowed_origins_from_client_redirect_uris: true
     clients:
-      - client_id: "grafana"
-        client_name: "Grafana"
-        client_secret: "$${GRAFANA_OAUTH_CLIENT_SECRET_DIGEST}"
+      - client_name: grafana
+        client_id: grafana
+        client_secret: '{{ secret "/config/secret/GRAFANA_OAUTH_CLIENT_SECRET_DIGEST" }}'
         public: false
-        authorization_policy: "two_factor"
-        require_pkce: true
-        pkce_challenge_method: "S256"
+        authorization_policy: two_factor
+        pre_configured_consent_duration: 1y
+        scopes: [openid, profile, groups, email]
         redirect_uris: ["https://graf.stevewm.dev/login/generic_oauth"]
-        scopes: ["openid", "profile", "groups", "email"]
-        userinfo_signed_response_alg: "none"
-        token_endpoint_auth_method: "client_secret_post"
+        userinfo_signed_response_alg: none
