--- a/kubernetes/core/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/core/security/authelia/app/externalsecret.yaml
@@ -15,9 +15,13 @@ spec:
       remoteRef:
         key: AUTHELIA_STORAGE_ENCRYPTION_KEY
 
-    - secretKey: AUTHELIA_OIDC_JWKS_KEY
+    - secretKey: AUTHELIA_REDIS_ENCRYPTION_KEY
       remoteRef:
-        key: OIDC_JWKS_KEY
+        key: AUTHELIA_REDIS_ENCRYPTION_KEY
+
+    - secretKey: OIDC_JWKS_KEY
+      remoteRef:
+        key: AUTHELIA_OIDC_JWKS_KEY
 
     - secretKey: AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET
       remoteRef:
@@ -31,8 +35,7 @@ spec:
       remoteRef:
         key: GLAUTH_SEARCH_PSW
 
-  # Apps
-  dataFrom:
-    - find:
-        name:
-          regexp: "_OAUTH_CLIENT_SECRET_DIGEST"
+    # Apps
+    - secretKey: GRAFANA_OAUTH_CLIENT_SECRET_DIGEST
+      remoteRef:
+        key: GRAFANA_OAUTH_CLIENT_SECRET_DIGEST
