--- a/kubernetes/core/security/glauth/app/externalsecret.yaml
+++ b/kubernetes/core/security/glauth/app/externalsecret.yaml
@@ -11,6 +11,10 @@ spec:
   target:
     name: glauth
     template:
+      # Create passbcrypt:
+      #   "https://gchq.github.io/CyberChef/#recipe=Bcrypt(12)To_Hex('None',0)"
+      # or
+      #   htpasswd -bnBC 10 "" YOUR_PASSWORD | tr -d ':\n' | od -A n -t x1 | sed 's/ *//g' | tr -d '\n'
       templateFrom:
         - configMap:
             name: glauth-config-tpl
