--- a/kubernetes/core/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/core/security/authelia/app/helmrelease.yaml
@@ -85,11 +85,15 @@ spec:
                   name: *app
 
             env:
-              AUTHELIA_SERVER_ADDRESS: tcp://0.0.0.0:80
+              AUTHELIA_LOG_LEVEL: info
+              AUTHELIA_NOTIFIER_SMTP_SENDER: "Authelia <authelia@stevewm.dev>"
               AUTHELIA_SERVER_DISABLE_HEALTHCHECK: "true"
-              AUTHELIA_TELEMETRY_METRICS_ADDRESS: tcp://0.0.0.0:80
+              AUTHELIA_SERVER_ADDRESS: tcp://0.0.0.0:8888
+              AUTHELIA_TELEMETRY_METRICS_ADDRESS: tcp://0.0.0.0:8080
               AUTHELIA_TELEMETRY_METRICS_ENABLED: "true"
               AUTHELIA_THEME: dark
+              AUTHELIA_TOTP_ISSUER: authelia.com
+              AUTHELIA_WEBAUTHN_DISABLE: "true"
               X_AUTHELIA_CONFIG: /config/config.yaml
               X_AUTHELIA_CONFIG_FILTERS: template
 
@@ -155,6 +159,6 @@ spec:
       db-secret-files:
         enabled: true
         type: secret
-        name: authelia-db
+        name: authelia-pguser-authelia
         globalMounts:
           - path: /config/db
