--- a/kubernetes/core/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/core/monitoring/grafana/app/helmrelease.yaml
@@ -332,24 +332,24 @@ spec:
       GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: natel-discrete-panel,pr0ps-trackmap-panel,panodata-map-panel
       GF_SECURITY_COOKIE_SAMESITE: grafana
       GF_SERVER_ROOT_URL: https://graf.stevewm.dev
-      # # OAUTH
-      # GF_AUTH_GENERIC_OAUTH_ENABLED: tr
-      # GF_AUTH_GENERIC_OAUTH_NAME: Authelia
-      # GF_AUTH_GENERIC_OAUTH_CLIENT_ID: grafana
-      # GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET:
-      #   secretKeyRef:
-      #     name: grafana-generated
-      #     key: client_secret
-      # GF_AUTH_GENERIC_OAUTH_SCOPES: "openid profile email groups"
-      # GF_AUTH_GENERIC_OAUTH_EMPTY_SCOPES: "false"
-      # GF_AUTH_GENERIC_OAUTH_AUTH_URL: https://sso.stevewm.dev/api/oidc/authorization
-      # GF_AUTH_GENERIC_OAUTH_TOKEN_URL: https://sso.stevewm.dev/api/oidc/token
-      # GF_AUTH_GENERIC_OAUTH_API_URL: https://sso.stevewm.dev/api/oidc/userinfo
-      # GF_AUTH_GENERIC_OAUTH_LOGIN_ATTRIBUTE_PATH: preferred_username
-      # GF_AUTH_GENERIC_OAUTH_GROUPS_ATTRIBUTE_PATH: "groups"
-      # GF_AUTH_GENERIC_OAUTH_NAME_ATTRIBUTE_PATH: name
-      # GF_AUTH_GENERIC_OAUTH_USE_PKCE:
-      # GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: contains(groups, 'admin') && 'Admin' || contains(groups, 'editor') && 'Editor' || 'Viewer'
+      # OAUTH
+      GF_AUTH_GENERIC_OAUTH_ENABLED: true
+      GF_AUTH_GENERIC_OAUTH_NAME: Authelia
+      GF_AUTH_GENERIC_OAUTH_CLIENT_ID: grafana
+      GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET:
+        secretKeyRef:
+          name: grafana-sso
+          key: client_secret
+      GF_AUTH_GENERIC_OAUTH_SCOPES: "openid profile email groups"
+      GF_AUTH_GENERIC_OAUTH_EMPTY_SCOPES: "false"
+      GF_AUTH_GENERIC_OAUTH_AUTH_URL: https://sso.stevewm.dev/api/oidc/authorization
+      GF_AUTH_GENERIC_OAUTH_TOKEN_URL: https://sso.stevewm.dev/api/oidc/token
+      GF_AUTH_GENERIC_OAUTH_API_URL: https://sso.stevewm.dev/api/oidc/userinfo
+      GF_AUTH_GENERIC_OAUTH_LOGIN_ATTRIBUTE_PATH: preferred_username
+      GF_AUTH_GENERIC_OAUTH_GROUPS_ATTRIBUTE_PATH: "groups"
+      GF_AUTH_GENERIC_OAUTH_NAME_ATTRIBUTE_PATH: name
+      GF_AUTH_GENERIC_OAUTH_USE_PKCE:
+      GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: contains(groups, 'admin') && 'Admin' || contains(groups, 'editor') && 'Editor' || 'Viewer'
 
     imageRenderer:
       enabled: true
