fix(authelia): smtp credentials

--- a/kubernetes/core/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/core/security/authelia/app/externalsecret.yaml
@@ -35,6 +35,14 @@ spec:
       remoteRef:
         key: GLAUTH_SEARCH_PSW
 
+    - secretKey: SMTP_RELAY_PASSWORD
+      remoteRef:
+        key: SMTP_RELAY_PASSWORD
+
+    - secretKey: SMTP_RELAY_USERNAME
+      remoteRef:
+        key: SMTP_RELAY_USERNAME
+
     # Apps
     - secretKey: GRAFANA_OAUTH_CLIENT_SECRET_DIGEST
       remoteRef:
