--- a/kubernetes/core/security/authelia/app/config/config.yaml
+++ b/kubernetes/core/security/authelia/app/config/config.yaml
@@ -49,10 +49,11 @@ storage:
     schema: authelia
 
 notifier:
-  disable_startup_check: true
   smtp:
-    address: smtp-relay.network.svc.cluster.local:25
-    sender: Authelia <noreply@stevewm.dev>
+    username: '{{ secret "/config/secret/SMTP_RELAY_USERNAME" }}'
+    password: '{{ secret "/config/secret/SMTP_RELAY_PASSWORD" }}'
+    address: smtp://smtp-relay.network.svc.cluster.local:25
+    sender: 'Authelia <{{ secret "/config/secret/SMTP_RELAY_USERNAME" }}>'
     disable_require_tls: true
 
 totp:
