--- a/kubernetes/core/network/smtp-relay/app/config/maddy.conf
+++ b/kubernetes/core/network/smtp-relay/app/config/maddy.conf
@@ -4,7 +4,7 @@ runtime_dir /cache/run
 openmetrics tcp://0.0.0.0:{env:SMTP_RELAY_METRICS_PORT} { }
 
 tls off
-hostname {env:DOMAIN}
+hostname {env:SMTP_RELAY_DOMAIN}
 
 smtp tcp://0.0.0.0:{env:SMTP_RELAY_SMTP_PORT} {
     default_source {
