--- a/kubernetes/core/security/authelia/app/config/config.yaml
+++ b/kubernetes/core/security/authelia/app/config/config.yaml
@@ -53,7 +53,7 @@ notifier:
     username: '{{ secret "/config/secret/SMTP_RELAY_USERNAME" }}'
     password: '{{ secret "/config/secret/SMTP_RELAY_PASSWORD" }}'
     address: smtp://smtp-relay.network.svc.cluster.local:25
-    sender: 'Authelia <{{ secret "/config/secret/SMTP_RELAY_USERNAME" }}>'
+    sender: '{{ secret "/config/secret/SMTP_RELAY_USERNAME" }}'
     disable_require_tls: true
 
 totp:
