--- a/kubernetes/core/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/core/monitoring/grafana/app/helmrelease.yaml
@@ -348,7 +348,7 @@ spec:
       GF_AUTH_GENERIC_OAUTH_LOGIN_ATTRIBUTE_PATH: preferred_username
       GF_AUTH_GENERIC_OAUTH_GROUPS_ATTRIBUTE_PATH: "groups"
       GF_AUTH_GENERIC_OAUTH_NAME_ATTRIBUTE_PATH: name
-      GF_AUTH_GENERIC_OAUTH_USE_PKCE:
+      GF_AUTH_GENERIC_OAUTH_USE_PKCE: "true"
       GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: contains(groups, 'admin') && 'Admin' || contains(groups, 'editor') && 'Editor' || 'Viewer'
 
     imageRenderer:
