--- a/kubernetes/core/network/smtp-relay/app/config/maddy.conf
+++ b/kubernetes/core/network/smtp-relay/app/config/maddy.conf
@@ -7,18 +7,27 @@ tls off
 hostname {env:SMTP_RELAY_DOMAIN}
 
 smtp tcp://0.0.0.0:{env:SMTP_RELAY_SMTP_PORT} {
-    default_source {
+    debug {env:DEBUG}
+    io_debug {env:DEBUG}
+
+    source {env:SMTP_DOMAIN} {
         deliver_to &remote_queue
+    }
+
+    default_source {
+        reject
     }
 }
 
 target.queue remote_queue {
+    debug {env:DEBUG}
     target &remote_smtp
 }
 
 target.smtp remote_smtp {
     debug {env:DEBUG}
     attempt_starttls yes
+    require_tls yes
     auth plain {env:SMTP_RELAY_USERNAME} {env:SMTP_RELAY_PASSWORD}
-    targets tcp://{env:SMTP_RELAY_SERVER}:{env:SMTP_RELAY_SERVER_PORT}
+    targets tls://{env:SMTP_RELAY_SERVER}:{env:SMTP_RELAY_SERVER_PORT}
 }
