--- a/kubernetes/core/security/authelia/app/config/config.yaml
+++ b/kubernetes/core/security/authelia/app/config/config.yaml
@@ -92,7 +92,13 @@ identity_providers:
         client_secret: '{{ secret "/config/secret/GRAFANA_OAUTH_CLIENT_SECRET_DIGEST" }}'
         public: false
         authorization_policy: two_factor
+        require_pkce: true
+        pkce_challenge_method: "S256"
+        response_types: ["code"]
+        grant_types: ["authorization_code"]
         pre_configured_consent_duration: 1y
         scopes: [openid, profile, groups, email]
         redirect_uris: ["https://graf.stevewm.dev/login/generic_oauth"]
-        userinfo_signed_response_alg: none
+        access_token_signed_response_alg: "none"
+        userinfo_signed_response_alg: "none"
+        token_endpoint_auth_method: "client_secret_basic"
