fix(authelia): client_secret_basic

--- a/kubernetes/core/security/authelia/app/config/config.yaml
+++ b/kubernetes/core/security/authelia/app/config/config.yaml
@@ -101,4 +101,4 @@ identity_providers:
         redirect_uris: ["https://graf.stevewm.dev/login/generic_oauth"]
         access_token_signed_response_alg: "none"
         userinfo_signed_response_alg: "none"
-        token_endpoint_auth_method: "client_secret_post"
+        token_endpoint_auth_method: "client_secret_basic"
