--- a/kubernetes/core/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/core/monitoring/grafana/app/helmrelease.yaml
@@ -338,9 +338,10 @@ spec:
       GF_AUTH_GENERIC_OAUTH_ICON: signin
       GF_AUTH_GENERIC_OAUTH_CLIENT_ID: grafana
       GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET:
-        secretKeyRef:
-          name: grafana-sso
-          key: client_secret
+        valueFrom:
+          secretKeyRef:
+            name: grafana-sso
+            key: client_secret
       GF_AUTH_GENERIC_OAUTH_SCOPES: "openid profile email groups"
       GF_AUTH_GENERIC_OAUTH_EMPTY_SCOPES: "false"
       GF_AUTH_GENERIC_OAUTH_AUTH_URL: https://sso.stevewm.dev/api/oidc/authorization
