fix: swapped values

--- a/kubernetes/flux/components/sso-secret/externalsecret.yaml
+++ b/kubernetes/flux/components/sso-secret/externalsecret.yaml
@@ -11,6 +11,6 @@ spec:
   target:
     name: *name
   data:
-    - secretKey: ${APP}_OAUTH_CLIENT_SECRET
+    - secretKey: client_secret
       remoteRef:
-        key: client_secret
+        key: ${APP}_OAUTH_CLIENT_SECRET
