fix: uppercase remoteRef

--- a/kubernetes/flux/components/sso-secret/externalsecret.yaml
+++ b/kubernetes/flux/components/sso-secret/externalsecret.yaml
@@ -13,4 +13,4 @@ spec:
   data:
     - secretKey: client_secret
       remoteRef:
-        key: ${APP}_OAUTH_CLIENT_SECRET
+        key: ${APP^^}_OAUTH_CLIENT_SECRET
