fix(grafana): envFrom

--- a/kubernetes/flux/components/sso-secret/externalsecret.yaml
+++ b/kubernetes/flux/components/sso-secret/externalsecret.yaml
@@ -11,6 +11,6 @@ spec:
   target:
     name: *name
   data:
-    - secretKey: client_secret
+    - secretKey: ${OAUTH_SECRET_KEY_NAME:=client_secret}
       remoteRef:
         key: ${APP^^}_OAUTH_CLIENT_SECRET
