--- a/kubernetes/core/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/core/monitoring/grafana/app/helmrelease.yaml
@@ -337,11 +337,6 @@ spec:
       GF_AUTH_GENERIC_OAUTH_NAME: Authelia
       GF_AUTH_GENERIC_OAUTH_ICON: signin
       GF_AUTH_GENERIC_OAUTH_CLIENT_ID: grafana
-      GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET:
-        valueFrom:
-          secretKeyRef:
-            name: grafana-sso
-            key: client_secret
       GF_AUTH_GENERIC_OAUTH_SCOPES: "openid profile email groups"
       GF_AUTH_GENERIC_OAUTH_EMPTY_SCOPES: "false"
       GF_AUTH_GENERIC_OAUTH_AUTH_URL: https://sso.stevewm.dev/api/oidc/authorization
@@ -352,7 +347,8 @@ spec:
       GF_AUTH_GENERIC_OAUTH_NAME_ATTRIBUTE_PATH: name
       GF_AUTH_GENERIC_OAUTH_USE_PKCE: "true"
       GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: contains(groups, 'admin') && 'Admin' || contains(groups, 'editor') && 'Editor' || 'Viewer'
-
+    envFromSecrets:
+      - name: grafana-sso
     imageRenderer:
       enabled: true
 
