fix(maddy): new secret name

--- a/kubernetes/core/network/smtp-relay/app/config/maddy.conf
+++ b/kubernetes/core/network/smtp-relay/app/config/maddy.conf
@@ -8,9 +8,8 @@ hostname {env:SMTP_RELAY_DOMAIN}
 
 smtp tcp://0.0.0.0:{env:SMTP_RELAY_SMTP_PORT} {
     debug {env:DEBUG}
-    io_debug {env:DEBUG}
 
-    source {env:SMTP_DOMAIN} {
+    source {env:SMTP_RELAY_DOMAIN} {
         deliver_to &remote_queue
     }
 
