--- a/kubernetes/apps/selfhosted/karakeep/ks.yaml
+++ b/kubernetes/apps/selfhosted/karakeep/ks.yaml
@@ -21,6 +21,7 @@ spec:
   wait: true
   components:
     - ../../../../flux/components/volsync/hetzner
+    - ../../../../flux/components/sso-secret
   postBuild:
     substitute:
       APP: *app
