--- a/kubernetes/apps/selfhosted/karakeep/app/helmrelease.yaml
+++ b/kubernetes/apps/selfhosted/karakeep/app/helmrelease.yaml
@@ -63,6 +63,17 @@ spec:
               NEXTAUTH_URL: https://kk.stevewm.dev
               DISABLE_NEW_RELEASE_CHECK: true
               COREPACK_INTEGRITY_KEYS: 0
+              # Authelia
+              DISABLE_PASSWORD_AUTH: true
+              OAUTH_ALLOW_DANGEROUS_EMAIL_ACCOUNT_LINKING: true
+              OAUTH_WELLKNOWN_URL: "https://sso.stevewm.dev/.well-known/openid-configuration"
+              OAUTH_CLIENT_ID: "karakeep"
+              OAUTH_CLIENT_SECRET:
+                valueFrom:
+                  secretKeyRef:
+                    name: karakeep-sso
+                    key: client_secret
+              OAUTH_PROVIDER_NAME: "Authelia"
             probes:
               liveness:
                 enabled: true
