--- a/kubernetes/core/security/authelia/app/config/config.yaml
+++ b/kubernetes/core/security/authelia/app/config/config.yaml
@@ -86,8 +86,13 @@ identity_providers:
     cors:
       endpoints: ["authorization", "token", "revocation", "introspection"]
       allowed_origins_from_client_redirect_uris: true
+
+    claims_policies:
+      karakeep:
+        id_token: ["email"]
+
     clients:
-      - client_name: grafana
+      - client_name: Grafana
         client_id: grafana
         client_secret: '{{ secret "/config/secret/GRAFANA_OAUTH_CLIENT_SECRET_DIGEST" }}'
         public: false
@@ -99,6 +104,27 @@ identity_providers:
         pre_configured_consent_duration: 1y
         scopes: [openid, profile, groups, email]
         redirect_uris: ["https://graf.stevewm.dev/login/generic_oauth"]
+        access_token_signed_response_alg: "none"
+        userinfo_signed_response_alg: "none"
+        token_endpoint_auth_method: "client_secret_basic"
+
+      - client_name: Karakeep
+        client_id: karakeep
+        client_secret: '{{ secret "/config/secret/KARAKEEP_OAUTH_CLIENT_SECRET_DIGEST" }}'
+        public: false
+        authorization_policy: "two_factor"
+        require_pkce: false
+        pkce_challenge_method: ""
+        redirect_uris:
+          - "https://kk.stevewm.dev/api/auth/callback/custom"
+        scopes:
+          - "openid"
+          - "profile"
+          - "email"
+        response_types:
+          - "code"
+        grant_types:
+          - "authorization_code"
         access_token_signed_response_alg: "none"
         userinfo_signed_response_alg: "none"
         token_endpoint_auth_method: "client_secret_basic"
