--- a/kubernetes/apps/selfhosted/mealie/ks.yaml
+++ b/kubernetes/apps/selfhosted/mealie/ks.yaml
@@ -9,7 +9,7 @@ spec:
   targetNamespace: *namespace
   commonMetadata:
     labels:
-      app.kubernetes.io/name: mealie
+      app.kubernetes.io/name: &app mealie
   interval: 30m
   timeout: 5m
   path: ./kubernetes/apps/selfhosted/mealie/app
@@ -21,7 +21,8 @@ spec:
   wait: true
   components:
     - ../../../../flux/components/volsync/hetzner
+    - ../../../../flux/components/sso-secret
   postBuild:
     substitute:
-      APP: mealie
+      APP: *app
       VOLSYNC_CLAIM: mealie-config
