fix(authelia): mealie secret

--- a/kubernetes/core/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/core/security/authelia/app/externalsecret.yaml
@@ -43,6 +43,11 @@ spec:
     - secretKey: GRAFANA_OAUTH_CLIENT_SECRET_DIGEST
       remoteRef:
         key: GRAFANA_OAUTH_CLIENT_SECRET_DIGEST
+
     - secretKey: KARAKEEP_OAUTH_CLIENT_SECRET_DIGEST
       remoteRef:
         key: KARAKEEP_OAUTH_CLIENT_SECRET_DIGEST
+
+    - secretKey: MEALIE_OAUTH_CLIENT_SECRET_DIGEST
+      remoteRef:
+        key: MEALIE_OAUTH_CLIENT_SECRET_DIGEST
