--- a/kubernetes/core/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/core/security/authelia/app/externalsecret.yaml
@@ -51,3 +51,7 @@ spec:
     - secretKey: MEALIE_OAUTH_CLIENT_SECRET_DIGEST
       remoteRef:
         key: MEALIE_OAUTH_CLIENT_SECRET_DIGEST
+
+    - secretKey: ACTUAL_OAUTH_CLIENT_SECRET_DIGEST
+      remoteRef:
+        key: ACTUAL_OAUTH_CLIENT_SECRET_DIGEST
